# rust-image-processor

./: Cargo.toml  readme.md
src/: main.rs  validate.rs
