[package]
name = "rust-image-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] } 
image = "0.25.1"
lazy_static = "1.5.0"
regex = "1.10.5"
reqwest = "0.12.5"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = "=2.3.0"
